apps/bun-fiber/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bun-fiber
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bun-fiber
  template:
    metadata:
      labels:
        app: bun-fiber
    spec:
      containers:
        - name: bun-fiber
          image: ghcr.io/tmusial99/bun-fiber:20250824-131958 # {"$imagepolicy": "flux-system:bun-fiber"}
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 3001
              name: metrics
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: bun-fiber
  namespace: default
  labels:
    app: bun-fiber
spec:
  selector:
    app: bun-fiber
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: metrics
      port: 3001
      targetPort: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bun-fiber
  namespace: default
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  tls:
    - hosts:
        - tmdev.pl
      secretName: tmdev-tls
    - hosts:
        - novi-tech.net
      secretName: novi-tech-tls
  rules:
    - host: tmdev.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bun-fiber
                port:
                  name: http
    - host: novi-tech.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bun-fiber
                port:
                  name: http
